Fix terminal overflow, only let the content themselves overflow, not the title

--- a/loritta-bot-discord/src/main/sass-dashboard/components/_developer-docs.scss
+++ b/loritta-bot-discord/src/main/sass-dashboard/components/_developer-docs.scss
@@ -95,6 +95,7 @@
     .mainframe-terminal {
       padding: 1em;
       font-family: monospace;
+      overflow: auto;
 
       .term-green {
         color: #b0eb93;
